Update missing tests